# corpus

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/corpus/: setup_interface.py  utils_index.py  utils_question.py  utils_sker.py
src/corpus/ref_question/: Fiche_Suivi_AOB2B.yaml  Referentiel_Risque_AOB2B.yaml
tests/fixtures/: ChunkTest.txt  CsvSemiColonText.csv  Dict_AO.json  DocTest.docx  ResultChunkTest.txt  ResultDocTest.json  ResultXlsxText.json  XlsText.xls  XlsxText.xlsx
tests/units/: test_iface.py  test_index.py  test_questions.py  test_sker.py
