[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "corpus"
version = "0.0.0"
description = "Réponse automatisée à des appels d'offres"
authors = ["Pierre Lagrange <pierrelagrange@live.fr>"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pre-commit = "3.8.0"
gradio = "4.39.0"
gradio_client = "1.1.1"
openai = "1.16.2"
langchain = "0.1.14"
python-dotenv = "*"
beautifulsoup4 = "4.12.3"
lxml = "5.2.2"
azure-search-documents = "11.4.0"
azure-identity = "1.16.0"
semantic-kernel = "1.9.0"
mimetypes-magic = "0.4.30"
pypdf = "3.4.0"
pypdf-table-extraction = "0.0.1"
ghostscript = "0.7"
opencv-python = "4.10.0.82"
spacy = "3.7.5"
json2html = "1.3.0"
tiktoken = "0.7.0"
python-docx = "1.1.2"
python-json-logger = "2.0.7"
typer = "0.12.3"
openpyxl = "3.1.5"
python-magic = "0.4.27"
pylibmagic = "0.5.0"
pydantic-core = "2.18.4"
pydantic-settings = "2.3.3"
pydantic = "2.7.4"
fastapi = "0.111"
fr_core_news_sm = {url = 'https://github.com/explosion/spacy-models/releases/tag/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0.tar.gz'}

[tool.poetry.extras]
all = ["pytest", "mypy", "pytest-mock", "pytest-cov", "pytest-asyncio","ruff", "pre-commit", "mkdocs-material", "mkdocstrings"]
test = ["pytest","fr_core_news_sm","pytest-mock", "pytest-cov", "pytest-asyncio"]
docs = ["mkdocs-material", "mkdocstrings"]
mypy = ["mypy"]
ruff = ["ruff"]

# pytest-mock = "3.14.0"
# pytest-cov = "5.0.0"
# pytest-asyncio = "0.24.0"
# pytest = "8.3.2"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["py.typed", "*.yaml", "*.yml", "*.conf"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "A",  # flake8-builtins
    "PLC",  # pylint conventions
    "PLE",  # pylint errors
    "PLW",  # pylint warnings
    "UP",  # pyupgrade
    "S",  # flake8-bandit
    "B",  # flake8-bugbear
    "I",  # isort
    "D",  # pydocstyle
    "NPY",  # NumPy-specific rules
]
ignore = ["E501", "D2", "D3", "D4", "D104", "D100", "D106", "S311"]
exclude = ["tests/**"]

# Version 2.9.0 KO - https://github.com/microsoft/semantic-kernel/issues/8558 # https://github.com/gradio-app/gradio/issues/9278#issuecomment-2333875064 
# fastapi 0.113 KO as well.
# to be fixed with semantic kernel 1.8.2
